--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "kafka-node": "5.0.0"
+    "kafka-node": "5.0.0",
+    "morgan": "~1.9.1"
   }
 }
